@@ -1,7 +1,7 @@
 package caio.portfolio.livraria.service.country;
 
-import java.util.Arrays;
 import java.util.Locale;
+import java.util.Set;
 
 import org.springframework.stereotype.Service;
 
@@ -10,6 +10,8 @@ import caio.portfolio.livraria.service.country.model.CountryValidator;
 
 @Service
 public class CountryValidatorImpl implements CountryValidator {
+	
+	private static final Set<String> VALID_ISO_CODES = Set.of(Locale.getISOCountries());
 
 	@Override
 	public void validateProperties(CreateCountryDTO dto) {
@@ -18,22 +20,18 @@ public class CountryValidatorImpl implements CountryValidator {
 
 	@Override
 	public String processIsoAlpha2Code(String isoAlpha2Code) {
-		boolean isIsoAlpha2CodeEmptyOrBlank = isoAlpha2Code.trim().isEmpty() || 
-			isoAlpha2Code.trim().isBlank();
-		
-		if(isIsoAlpha2CodeEmptyOrBlank) throw new IllegalArgumentException("O campo 'isoAlpha2Code' não pode estar vazio");
-		
-		String normalizedIsoAlpha2Code = isoAlpha2Code.toUpperCase();
-		boolean validIsoAlpha2Code = Arrays.asList(Locale.getISOCountries()).contains(normalizedIsoAlpha2Code);
+		boolean isIsoAlpha2CodeNullOrBlank = isoAlpha2Code == null || isoAlpha2Code.isBlank();
+		if(isIsoAlpha2CodeNullOrBlank) throw new IllegalArgumentException("O campo 'isoAlpha2Code' não pode estar vazio");
+		String normalizedIsoAlpha2Code = isoAlpha2Code.trim().toUpperCase();
+		boolean validIsoAlpha2Code = VALID_ISO_CODES.contains(normalizedIsoAlpha2Code);
 		if(!validIsoAlpha2Code) throw new IllegalArgumentException("O código '"+isoAlpha2Code+"' não corresponde a um código válido.");
-		  
-		return null;
+		return normalizedIsoAlpha2Code;
 	}
 
 	@Override
 	public String resolveNameByIsoAlpha2Code(String isoAlpha2Code) {
-		// TODO
-		return null;
+		String validIsoAlpha2Code = processIsoAlpha2Code(isoAlpha2Code);
+		Locale countryLocale = new Locale.Builder().setRegion(validIsoAlpha2Code).build();
+		return countryLocale.getDisplayName(Locale.ENGLISH);
 	}
-
 }
